Refactor configuration management and remove deprecated cache configuration
- Deleted the CacheConfiguration class as it is no longer needed.
- Updated CometRuntime to use ProcessHandle for process ID retrieval, removing JNA dependencies.
- Changed HikariConnectionProvider to use close() instead of shutdown() for closing the data source.
- Added a new .env.example file to provide a template for environment variables.
- Introduced ConfigurationKeys and ConfigurationSource interfaces to standardize configuration key handling.
- Created various configuration classes for API, database, game, network, RCON, system, and WebSocket settings with default values.
- Implemented CompositeConfigurationSource to manage multiple configuration sources with priority.
- Added DotEnvConfigurationSource and EnvConfigurationSource to read configuration from .env files and environment variables, respectively.
- Created MapConfigurationSource for in-memory configuration overrides.
- Added PropertiesConfigurationSource to support legacy properties file configuration.
- Included a new figuredata.xml configuration file in resources.

Co-authored-by: Copilot <copilot@github.com>